[project]
authors = [{name = "David Kouril", email = "david.kouril@gmail.com"}]
dependencies = []
description = "Add a short description here"
name = "polychrom-example-with-chromospyce"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
polychrom_example_with_chromospyce = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
openmm = ">=8.1.2,<9"
