[project]
authors = [{name = "David Kouril", email = "david.kouril@gmail.com"}]
dependencies = []
description = "Add a short description here"
name = "polychrom-example-with-chromospyce"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
polychrom_example_with_chromospyce = { path = ".", editable = true }
polychrom = { git = "https://git@github.com/open2c/polychrom.git" }
nglutils = { git = "https://git@github.com/mirnylab/nglutils.git" }
chromospyce = ">=0.1.0"
pyarrow = ">=17.0.0"

[tool.pixi.tasks]
lab = "jupyter lab"
nbclear = "jupyter nbconvert --clear-output --inplace *.ipynb"

[tool.pixi.dependencies]
openmm = ">=8.1.2,<9"
jupyterlab = ">=4.2.5,<5"
six = ">=1.16.0,<2"
cython = ">=3.0.11,<4"
numpy = ">=1.26.4,<2"
scipy = ">=1.13.1,<2"
h5py = ">=3.11.0,<4"
pandas = ">=2.2.3,<3"
joblib = ">=1.4.2,<2"
pytest = ">=8.3.3,<9"
nbconvert = ">=7.16.4,<8"
